--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
     "react/jsx-uses-vars": "error",
     "react/prop-types": 0,
     "react/react-in-jsx-scope": 0,
-    "@typescript-eslint/explicit-module-boundary-types": 0
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "linebreak-style": ["error", "unix"]
   },
   "settings": {
     "import/parsers": {
