--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,7 @@
     "react/jsx-uses-vars": "error",
     "react/prop-types": 0,
     "react/react-in-jsx-scope": 0,
-    "@typescript-eslint/explicit-module-boundary-types": 0,
-    "linebreak-style": ["error", "unix"]
+    "@typescript-eslint/explicit-module-boundary-types": 0
   },
   "settings": {
     "import/parsers": {
